force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/BLN_OperationWrapperSetting__mdt.object-meta.xml
<CustomObject>
    <label>BLN_OperationWrapperSetting</label>
    <pluralLabel>BLN_OperationWrapperSettings</pluralLabel>
</CustomObject>