force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/JobAppointment__c.field-meta.xml
<CustomField>
    <fullName>JobAppointment__c</fullName>
    <label>JobAppointment</label>
    <type>TextArea</type>
</CustomField>