force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/JobWorkOrder__c.field-meta.xml
<CustomField>
    <fullName>JobWorkOrder__c</fullName>
    <label>JobWorkOrder</label>
    <type>TextArea</type>
</CustomField>