force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/JobWorkOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>JobWorkOrderLineItem__c</fullName>
    <label>JobWorkOrderLineItem</label>
    <type>TextArea</type>
</CustomField>