force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/Motorist__c.field-meta.xml
<CustomField>
    <fullName>Motorist__c</fullName>
    <label>Motorist</label>
    <type>TextArea</type>
</CustomField>