force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/Policyholder__c.field-meta.xml
<CustomField>
    <fullName>Policyholder__c</fullName>
    <label>Policyholder</label>
    <type>TextArea</type>
</CustomField>