force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/RequiredSkills__c.field-meta.xml
<CustomField>
    <fullName>RequiredSkills__c</fullName>
    <label>RequiredSkills</label>
    <type>TextArea</type>
</CustomField>