force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <type>TextArea</type>
</CustomField>