force-app/main/default/objects/BLN_OperationWrapperSetting__mdt/fields/Wrapper_Sobjects_Heirarchy__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Sobjects_Heirarchy__c</fullName>
    <label>Wrapper Sobjects Heirarchy</label>
    <type>TextArea</type>
</CustomField>